--- a/urbanstory/pages/components/button.html
+++ b/urbanstory/pages/components/button.html
@@ -530,6 +530,32 @@
 		</section>
 	</section>
 	<section>
+		<h4>Button Icons</h4>
+		<button class="uh-btn">
+			<span><i class="icon icon-angle-left"></i></span>
+			Backward
+		</button>
+		<button class="uh-btn">
+			Forward
+			<span><i class="icon icon-angle-right"></i></span>
+		</button>
+		<button class="uh-btn">
+			<span><i class="icon icon-search"></i></span>
+		</button>
+		<section class="code-preview has-tab">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-14" id="html-tab">HTML</a>
+				</nav>
+			</div>
+			<pre class="code-snippet" id="html-14"><code>&lt;button class=&quot;uh-btn&quot;&gt; &lt;span&gt;&lt;i class=&quot;icon icon-angle-left&quot;&gt;&lt;/i&gt;&lt;/span&gt; Backward &lt;/button&gt;
+&lt;button class=&quot;uh-btn&quot;&gt; Forward &lt;span&gt;&lt;i class=&quot;icon icon-angle-right&quot;&gt;&lt;/i&gt;&lt;/span&gt; &lt;/button&gt;
+&lt;button class=&quot;uh-btn&quot;&gt; &lt;span&gt;&lt;i class=&quot;icon icon-search&quot;&gt;&lt;/i&gt;&lt;/span&gt; &lt;/button&gt;
+</code></pre>
+		</section>
+		</section>
+	</section>
+	<section>
 		<h4>Links</h4>
 		<ul>
 			<li><a href="" class="uh-link">Link Primary</a></li>
