--- a/urbanstory/pages/components/preloader.html
+++ b/urbanstory/pages/components/preloader.html
@@ -4,12 +4,12 @@
         <p>Pre loader purely using CSS</p>
     </section>
     <section>
-    	<h4>Sample</h4>
-    	<span class="uh-loader is-small">Loading...</span>
-    	<span class="uh-loader">Loading...</span>
-    	<span class="uh-loader is-large">Loading...</span>
-    	<button class="btn btn-firm btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
-    	<button class="btn btn-danger btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
+			<h4>Sample</h4>
+			<span class="uh-loader is-small">Loading...</span>
+			<span class="uh-loader">Loading...</span>
+			<span class="uh-loader is-large">Loading...</span>
+			<button class="uh-btn uh-btn-firm uh-btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
+			<button class="uh-btn uh-btn-danger uh-btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
 	</section>
 	<section class="code-preview has-tab">
 		<div class="card uh-tab">
@@ -21,10 +21,10 @@
 		<pre class="code-snippet" id="html-1"><code>&lt;span class=&quot;uh-loader is-small&quot;&gt;Loading...&lt;/span&gt;
 &lt;span class=&quot;uh-loader&quot;&gt;Loading...&lt;/span&gt;
 &lt;span class=&quot;uh-loader is-large&quot;&gt;Loading...&lt;/span&gt;
-&lt;button class=&quot;btn btn-firm btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;
-&lt;button class=&quot;btn btn-danger btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;</code></pre>
+&lt;button class=&quot;uh-btn uh-btn-firm uh-btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;
+&lt;button class=&quot;uh-btn uh-btn-danger uh-btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;</code></pre>
 		<pre class="code-snippet display-off" id="sass-1"><code>
-.btn {
+.uh-btn {
 	&.uh-loader {
 		// vertical-align: bottom;
 	}
