--- a/urbanstory/pages/components/tooltip.html
+++ b/urbanstory/pages/components/tooltip.html
@@ -5,23 +5,23 @@
     <section>
         <div class="urbanstory-tooltip-style">
             <h4>Tootltip <small>(Default)</small></h4>
-            <button class="btn btn-firm tooltip" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
+            <button class="uh-btn uh-btn-firm tooltip" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
         </div> 
         <div class="urbanstory-tooltip-style">
             <h4>Tootltip <code>.tooltip-right</code></h4>
-            <button class="btn btn-firm tooltip-right" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
+            <button class="uh-btn uh-btn-firm tooltip-right" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
         </div>
         <div class="urbanstory-tooltip-style">
             <h4>Tootltip <code>.tooltip-left</code></h4>
-            <button class="btn btn-firm tooltip-left" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
+            <button class="uh-btn uh-btn-firm tooltip-left" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
         </div>
         <div class="urbanstory-tooltip-style">
             <h4>Tootltip <code>.tooltip-top</code></h4>
-            <button class="btn btn-firm tooltip-top" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
+            <button class="uh-btn uh-btn-firm tooltip-top" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
         </div>
         <div class="urbanstory-tooltip-style">
             <h4>Tootltip <code>.tooltip-bottom</code></h4>
-            <button class="btn btn-firm tooltip-bottom" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
+            <button class="uh-btn uh-btn-firm tooltip-bottom" data-tooltip='Using 3 UH coins per candidate invitation.'>Hover me</button>
         </div>
     </section>
 </div>
@@ -250,32 +250,32 @@
         </code>
     </pre>
 
-    <!-- <button class="btn btn-firm" onclick="copyToClipboard('#texttocopy')"><i class="icon-code"></i>Copy</button> -->
+    <!-- <button class="uh-btn uh-btn-firm" onclick="copyToClipboard('#texttocopy')"><i class="icon-code"></i>Copy</button> -->
     <pre class="code-snippet display-on" id="html texttocopy">
-        <!-- <button class="btn btn-firm" onclick="copyToClipboard('#texttocopyhtml')"><i class="icon-code"></i>Copy</button> -->
+        <!-- <button class="uh-btn uh-btn-firm" onclick="copyToClipboard('#texttocopyhtml')"><i class="icon-code"></i>Copy</button> -->
         <code id="texttocopyhtml">
 &lt;div class="tooltip" data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-    &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-firm&quot;&gt;Hover me&lt;/button&gt;
 &lt;/div&gt;
         </code>
         <code>
 &lt;span class=&quot;tooltip-right&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-    &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-firm&quot;&gt;Hover me&lt;/button&gt;
 &lt;/span&gt;
         </code>
         <code>
 &lt;span class=&quot;tooltip-left&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-    &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-firm&quot;&gt;Hover me&lt;/button&gt;
 &lt;/span&gt;
         </code>
         <code>
 &lt;span class=&quot;tooltip-top&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-    &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-firm&quot;&gt;Hover me&lt;/button&gt;
 &lt;/span&gt;
         </code>
         <code>
 &lt;span class=&quot;tooltip-bottom&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-    &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-firm&quot;&gt;Hover me&lt;/button&gt;
 &lt;/span&gt;
         </code>
     </pre>
