--- a/urbanstory/src/css/sass/components-global/_alert.scss
+++ b/urbanstory/src/css/sass/components-global/_alert.scss
@@ -1,8 +1,9 @@
-//alert
 
 .alert {
   //@extend .card;
-  @extend .padd-l;
+  @include flexbox;
+  @include align-items(center);
+  padding: $gutter-l;
   overflow: auto;
   background: rgba($c-grey-2, 0.2);
   border: 1px solid rgba($c-grey-3, 0.2);
@@ -10,48 +11,6 @@
   position: relative;
   color: $c-grey-6;
   @include radius;
-  &.has-img {
-    padding-left: 4rem;
-    img {
-      float: left;
-      width: 2rem;
-      margin-left: -3rem;
-    }
-  }
-  &.is-info {
-    background: rgba($c-median-1, 0.2);
-    border: 1px solid rgba($c-median-3, 0.2);
-    //color:rgba($c-median-2, .75);
-    color: $c-median-3;
-    .alert-close {
-      color: rgba($c-median-3, 0.75);
-    }
-  }
-  &.is-success {
-    background: rgba($c-green-1, 0.2);
-    border: 1px solid rgba($c-green-3, 0.2);
-    color: $c-green-3;
-    .alert-close {
-      color: rgba($c-green-3, 0.75);
-    }
-  }
-  &.is-warning {
-    background: rgba($c-yellow-1, 0.2);
-    border: 1px solid rgba($c-yellow-3, 0.2);
-    color: $c-yellow-3;
-    .alert-close {
-      color: rgba($c-yellow-3, 0.75);
-    }
-  }
-  &.is-danger {
-    background: rgba($c-red-1, 0.2);
-    border: 1px solid rgba($c-red-3, 0.2);
-    color: rgba(darken($c-red-1, 20), 0.8);
-    color: $c-red-3;
-    .alert-close {
-      color: rgba($c-red-3, 0.75);
-    }
-  }
   h1,
   h2,
   h3,
@@ -65,10 +24,50 @@
     margin: 0;
     padding: 0;
   }
-}
-.alert-close {
-  position: absolute;
-  top: $gutter-m;
-  right: $gutter-m;
-  color: rgba(black, 0.35);
+
+  &-icon {
+    font-size: $font-xl;
+    margin-right: 1em;
+    align-self: flex-start;
+  }
+  &-info {
+    background: rgba($c-median-1, 0.2);
+    border: 1px solid rgba($c-median-3, 0.2);
+    //color:rgba($c-median-2, .75);
+    color: $c-median-3;
+    .alert-close {
+      color: rgba($c-median-3, 0.75);
+    }
+  }
+  &-success {
+    background: rgba($c-green-1, 0.2);
+    border: 1px solid rgba($c-green-3, 0.2);
+    color: $c-green-3;
+    .alert-close {
+      color: rgba($c-green-3, 0.75);
+    }
+  }
+  &-warning {
+    background: rgba($c-yellow-1, 0.2);
+    border: 1px solid rgba($c-yellow-3, 0.2);
+    color: $c-yellow-3;
+    .alert-close {
+      color: rgba($c-yellow-3, 0.75);
+    }
+  }
+  &-danger {
+    background: rgba($c-red-1, 0.2);
+    border: 1px solid rgba($c-red-3, 0.2);
+    color: rgba(darken($c-red-1, 20), 0.8);
+    color: $c-red-3;
+    .alert-close {
+      color: rgba($c-red-3, 0.75);
+    }
+  }
+  &-close {
+    position: absolute;
+    top: $gutter-m;
+    right: $gutter-m;
+    color: rgba(black, 0.35);
+  }
 }
