--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -35,6 +35,7 @@
 @import "../components-global/_switch";
 @import "../components-global/_notification";
 @import "../components-global/dropdown";
+@import "../components-global/_margin";
 
 // cards
 @import "../components-global/_img-showcase";
