--- a/urbanstory/pages/components/alert.html
+++ b/urbanstory/pages/components/alert.html
@@ -3,31 +3,35 @@
 		<h1>Alert</h1>
 	</section>
 	<section>
-		<h4>Alert <small>(Default)</small></h4>
-		<div class="alert">
-			<h4>Alert <small>(Default)</small></h4>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
-			engage in conversation with more and more people throughout their lives. And while most people will spend
-			their time constantly speaking, some never really learn to listen, which is the king of effective
-			communication.
-			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
-		</div>
-		<section class="code-preview has-tab">
-			<div class="card uh-tab">
-				<nav class="uh-tab-nav">
-					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
-					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
-				</nav>
-			</div>
-			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;alert&quot;&gt;
-	&lt;h4&gt;Alert &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
-	Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
-	&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    <div class="row">
+      <div class="col-xs-6">
+        <div class="card m-b-l">
+          <h5>Basic</h5>
+          <div class="alert">
+						<div class="alert-content">
+							<p>
+								Default Text
+							</p>
+						</div>
+					</div>
+					<div class="code-preview has-tab">
+						<div class="card uh-tab">
+							<nav class="uh-tab-nav">
+								<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+								<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+							</nav>
+						</div>
+						<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;alert&quot;&gt;
+  &lt;div class=&quot;alert-content&quot;&gt; 
+    &lt;p&gt; Default Text &lt;/p&gt; 
+  &lt;/div&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet display-off" id="sass-1"><code>
+					<pre class="code-snippet display-off" id="sass-1"><code>
 .alert {
 	//@extend .card;
-	@extend .padd-l;
+	@include flexbox;
+	@include align-items(center);
+	padding: $gutter-l;
 	overflow: auto;
 	background: rgba($c-grey-2, 0.2);
 	border: 1px solid rgba($c-grey-3, 0.2);
@@ -49,41 +53,117 @@
 		padding: 0;
 	}
 }
-
-.alert-close {
-	position: absolute;
-	top: $gutter-m;
-	right: $gutter-m;
-	color: rgba(black, 0.35);
-}
-			</code></pre>
-		</section>
-
-		<h4>Alert <code>.is-danger</code></h4>
-		<div class="alert is-danger">
-			<h4>Alert Danger</h4>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
-			engage in conversation with more and more people throughout their lives. And while most people will spend
-			their time constantly speaking, some never really learn to listen, which is the king of effective
-			communication.
-			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
-		</div>
-		<section class="code-preview has-tab">
-			<div class="card uh-tab">
-				<nav class="uh-tab-nav">
-					<a class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
-					<a class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
-				</nav>
-			</div>
-			<pre class="code-snippet" id="html-2"><code>&lt;div class=&quot;alert is-danger&quot;&gt;
-	&lt;h4&gt;Alert &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
-	Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
-	&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+							
+					</code></pre>
+					</div>
+				</div>
+				<div class="card m-b-l">
+					<h5>Closeable</h5>
+					<div class="alert alert-warning m-b-m">
+						<div class="alert-content">
+							<p>
+								Alert warning
+							</p>
+						</div>
+						<button class="uh-btn uh-btn-flat uh-btn-small alert-close"><i class="icon-close"></i></button>
+					</div>
+					<div class="code-preview">
+						<pre class="code-snippet"><code>&lt;div class=&quot;alert alert-warning&quot;&gt; 
+  &lt;div class=&quot;alert-content&quot;&gt; 
+    &lt;p&gt; Default Text &lt;/p&gt;
+  &lt;/div&gt;
+  &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet display-off" id="sass-2"><code>
+					</div>
+				</div>
+				<div class="card m-b-l">
+					<h5>With Title</h5>
+					<div class="alert alert-success m-b-m">
+						<div class="alert-content">
+							<h4>Alert success</h4>
+							<p>
+								Simple text success
+							</p>
+						</div>
+						<button class="uh-btn uh-btn-flat uh-btn-small alert-close"><i class="icon-close"></i></button>
+					</div>
+					<div class="code-preview">
+						<pre class="code-snippet"><code>&lt;div class=&quot;alert alert-warning&quot;&gt;
+  &lt;div class=&quot;alert-content&quot;&gt; 
+    &lt;h4&gt;Alert success&lt;/h4&gt;
+    &lt;p&gt; Simple text success &lt;/p&gt;
+  &lt;/div&gt;
+  &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;/div&gt;</code></pre>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-6">
+				<div class="card m-b-l">
+					<h5>More Types</h5>
+					<div class="alert alert-success m-b-m">
+						<div class="alert-content">
+							<p>
+								Alert success
+							</p>
+						</div>
+					</div>
+					<div class="alert alert-info m-b-m">
+						<div class="alert-content">
+							<p>
+								Alert info
+							</p>
+						</div>
+					</div>
+					<div class="alert alert-warning m-b-m">
+						<div class="alert-content">
+							<p>
+								Alert warning
+							</p>
+						</div>
+					</div>
+					<div class="alert alert-danger m-b-m">
+						<div class="alert-content">
+							<p>
+								Alert danger
+							</p>
+						</div>
+					</div>
+					<div class="code-preview has-tab">
+						<div class="card uh-tab">
+							<nav class="uh-tab-nav">
+								<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
+								<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
+							</nav>
+						</div>
+						<pre class="code-snippet" id="html-2"><code>&lt;div class=&quot;alert alert-success&quot;&gt;
+  &lt;div class=&quot;alert-content&quot;&gt; 
+    &lt;p&gt; Alert success &lt;/p&gt; 
+  &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;alert alert-info&quot;&gt;
+  &lt;div class=&quot;alert-content&quot;&gt; 
+    &lt;p&gt; Alert info &lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;alert alert-warning&quot;&gt;
+  &lt;div class=&quot;alert-content&quot;&gt; 
+    &lt;p&gt; Alert warning &lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;alert alert-danger&quot;&gt;
+  &lt;div class=&quot;alert-content&quot;&gt; 
+    &lt;p&gt; Alert danger &lt;/p&gt; 
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
+					<pre class="code-snippet display-off" id="sass-2"><code>
 .alert {
-	//@extend .card;
-	@extend .padd-l;
+	@include flexbox;
+	@include align-items(center);
+	padding: $gutter-l;
 	overflow: auto;
 	background: rgba($c-grey-2, 0.2);
 	border: 1px solid rgba($c-grey-3, 0.2);
@@ -91,15 +171,6 @@
 	position: relative;
 	color: $c-grey-6;
 	@include radius;
-	&.is-danger {
-		background: rgba($c-red-1, 0.2);
-		border: 1px solid rgba($c-red-3, 0.2);
-		color: rgba(darken($c-red-1, 20), 0.8);
-		color: $c-red-3;
-		.alert-close {
-			color: rgba($c-red-3, 0.75);
-		}
-	}
 	h1,
 	h2,
 	h3,
@@ -113,112 +184,13 @@
 		margin: 0;
 		padding: 0;
 	}
-}
 
-.alert-close {
-	position: absolute;
-	top: $gutter-m;
-	right: $gutter-m;
-	color: rgba(black, 0.35);
-}
-			</code></pre>
-		</section>
-		<h4>Alert <code>.is-success</code></h4>
-		<div class="alert is-success">
-			<h4>Alert Success</h4>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
-			engage in conversation with more and more people throughout their lives. And while most people will spend
-			their time constantly speaking, some never really learn to listen, which is the king of effective
-			communication.
-			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
-		</div>
-		<section class="code-preview has-tab">
-			<div class="card uh-tab">
-				<nav class="uh-tab-nav">
-					<a class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
-					<a class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
-				</nav>
-			</div>
-			<pre class="code-snippet" id="html-3"><code>&lt;div class=&quot;alert is-success&quot;&gt;
-	&lt;h4&gt;Alert &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
-	Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
-	&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
-&lt;/div&gt;</code></pre>
-			<pre class="code-snippet display-off" id="sass-3"><code>
-.alert {
-	//@extend .card;
-	@extend .padd-l;
-	overflow: auto;
-	background: rgba($c-grey-2, 0.2);
-	border: 1px solid rgba($c-grey-3, 0.2);
-	line-height: 1.5rem;
-	position: relative;
-	color: $c-grey-6;
-	@include radius;
-	&.is-success {
-		background: rgba($c-green-1, 0.2);
-		border: 1px solid rgba($c-green-3, 0.2);
-		color: $c-green-3;
-		.alert-close {
-			color: rgba($c-green-3, 0.75);
-		}
+	&-icon {
+		font-size: $font-xl;
+		margin-right: 1em;
+		align-self: flex-start;
 	}
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		margin-top: 0;
-		padding-right: $gutter-l;
-	}
-	p {
-		margin: 0;
-		padding: 0;
-	}
-}
-
-.alert-close {
-	position: absolute;
-	top: $gutter-m;
-	right: $gutter-m;
-	color: rgba(black, 0.35);
-}
-			</code></pre>
-		</section>
-		<h4>Alert <code>.is-info</code></h4>
-		<div class="alert is-info">
-			<h4>Alert Info</h4>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
-			engage in conversation with more and more people throughout their lives. And while most people will spend
-			their time constantly speaking, some never really learn to listen, which is the king of effective
-			communication.
-			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
-		</div>
-		<section class="code-preview has-tab">
-			<div class="card uh-tab">
-				<nav class="uh-tab-nav">
-					<a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
-					<a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
-				</nav>
-			</div>
-			<pre class="code-snippet" id="html-4"><code>&lt;div class=&quot;alert is-info&quot;&gt;
-	&lt;h4&gt;Alert &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
-	Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
-	&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
-&lt;/div&gt;</code></pre>
-			<pre class="code-snippet display-off" id="sass-4"><code>
-.alert {
-	//@extend .card;
-	@extend .padd-l;
-	overflow: auto;
-	background: rgba($c-grey-2, 0.2);
-	border: 1px solid rgba($c-grey-3, 0.2);
-	line-height: 1.5rem;
-	position: relative;
-	color: $c-grey-6;
-	@include radius;
-	&.is-info {
+	&-info {
 		background: rgba($c-median-1, 0.2);
 		border: 1px solid rgba($c-median-3, 0.2);
 		//color:rgba($c-median-2, .75);
@@ -227,73 +199,23 @@
 			color: rgba($c-median-3, 0.75);
 		}
 	}
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		margin-top: 0;
-		padding-right: $gutter-l;
-	}
-	p {
-		margin: 0;
-		padding: 0;
-	}
-}
-
-.alert-close {
-	position: absolute;
-	top: $gutter-m;
-	right: $gutter-m;
-	color: rgba(black, 0.35);
-}
-			</code></pre>
-		</section>
-		<h4>Alert <code>.is-danger</code></h4>
-		<div class="alert has-img is-danger">
-			<img
-				src="https://www.rhinocarhire.com/CorporateSite/media/Drive-Smart/Dash-Symbols/warning_symbol_in_red.png">
-			<h3>Warning</h3>
-			Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and
-			engage in conversation with more and more people throughout their lives. And while most people will spend
-			their time constantly speaking, some never really learn to listen, which is the king of effective
-			communication.
-			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
-		</div>
-		<section class="code-preview has-tab">
-			<div class="card uh-tab">
-				<nav class="uh-tab-nav">
-					<a  class="nav-item nav-fit-content active" href="#html-5" id="html-tab">HTML</a>
-					<a  class="nav-item nav-fit-content" href="#sass-5" id="sass-tab">SASS</a>
-				</nav>
-			</div>
-			<pre class="code-snippet" id="html-5"><code>&lt;div class=&quot;alert has-img is-danger&quot;&gt;
-	&lt;img src=&quot;https://www.rhinocarhire.com/CorporateSite/media/Drive-Smart/Dash-Symbols/warning_symbol_in_red.png&quot;&gt;
-	&lt;h3&gt;Warning&lt;/h3&gt;
-	Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
-	&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
-&lt;/div&gt;</code></pre>
-			<pre class="code-snippet display-off" id="sass-5"><code>
-.alert {
-	//@extend .card;
-	@extend .padd-l;
-	overflow: auto;
-	background: rgba($c-grey-2, 0.2);
-	border: 1px solid rgba($c-grey-3, 0.2);
-	line-height: 1.5rem;
-	position: relative;
-	color: $c-grey-6;
-	@include radius;
-	&.has-img {
-		padding-left: 4rem;
-		img {
-			float: left;
-			width: 2rem;
-			margin-left: -3rem;
+	&-success {
+		background: rgba($c-green-1, 0.2);
+		border: 1px solid rgba($c-green-3, 0.2);
+		color: $c-green-3;
+		.alert-close {
+			color: rgba($c-green-3, 0.75);
 		}
 	}
-	&.is-danger {
+	&-warning {
+		background: rgba($c-yellow-1, 0.2);
+		border: 1px solid rgba($c-yellow-3, 0.2);
+		color: $c-yellow-3;
+		.alert-close {
+			color: rgba($c-yellow-3, 0.75);
+		}
+	}
+	&-danger {
 		background: rgba($c-red-1, 0.2);
 		border: 1px solid rgba($c-red-3, 0.2);
 		color: rgba(darken($c-red-1, 20), 0.8);
@@ -302,28 +224,106 @@
 			color: rgba($c-red-3, 0.75);
 		}
 	}
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		margin-top: 0;
-		padding-right: $gutter-l;
-	}
-	p {
-		margin: 0;
-		padding: 0;
+	&-close {
+		position: absolute;
+		top: $gutter-m;
+		right: $gutter-m;
+		color: rgba(black, 0.35);
 	}
 }
+										
+					</code></pre>
+					</div>
+				</div>
+				<div class="card m-b-l">
+					<h5>With Icon</h5>
+					<div class="alert alert-success m-b-m">
+						<span class="alert-icon"><i class="icon icon-check"></i></span>
+						<div class="alert-content">
+							<h4>Alert success</h4>
+							<p>
+								Simple text success
+							</p>
+						</div>
+						<button class="uh-btn uh-btn-flat uh-btn-small alert-close"><i class="icon-close"></i></button>
+					</div>
+					<div class="alert alert-info m-b-m">
+						<span class="alert-icon"><i class="icon icon-info"></i></span>
+						<div class="alert-content">
+							<h4>Alert info</h4>
+							<p>
+								Simple text info
+							</p>
+						</div>
+						<button class="uh-btn uh-btn-flat uh-btn-small alert-close"><i class="icon-close"></i></button>
+					</div>
+					<div class="alert alert-warning m-b-m">
+						<span class="alert-icon"><i class="icon icon-warning"></i></span>
+						<div class="alert-content">
+							<h4>Alert warning</h4>
+							<p>
+								Simple text warning
+							</p>
+						</div>
+						<button class="uh-btn uh-btn-flat uh-btn-small alert-close"><i class="icon-close"></i></button>
+					</div>
+					<div class="alert alert-danger m-b-m">
+						<span class="alert-icon"><i class="icon icon-close"></i></span>
+						<div class="alert-content">
+							<h4>Alert danger</h4>
+							<p>
+								Simple text danger
+							</p>
+						</div>
+						<button class="uh-btn uh-btn-flat uh-btn-small alert-close"><i class="icon-close"></i></button>
+					</div>
+					<div class="code-preview">
+						<pre class="code-snippet"><code>&lt;div class=&quot;alert alert-success&quot;&gt;
+    &lt;span class=&quot;alert-icon&quot;&gt;&lt;i class=&quot;icon icon-check&quot;&gt;&lt;/i&gt;&lt;/span&gt;
+    &lt;div class=&quot;alert-content&quot;&gt;
+        &lt;h4&gt;Alert success&lt;/h4&gt;
+        &lt;p&gt;
+            Simple text success
+        &lt;/p&gt;
+    &lt;/div&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;/div&gt;
 
-.alert-close {
-	position: absolute;
-	top: $gutter-m;
-	right: $gutter-m;
-	color: rgba(black, 0.35);
-}
-			</code></pre>
-		</section>
-	</section>
+&lt;div class=&quot;alert alert-info&quot;&gt;
+    &lt;span class=&quot;alert-icon&quot;&gt;&lt;i class=&quot;icon icon-info&quot;&gt;&lt;/i&gt;&lt;/span&gt;
+    &lt;div class=&quot;alert-content&quot;&gt;
+        &lt;h4&gt;Alert info&lt;/h4&gt;
+        &lt;p&gt;
+            Simple text info
+        &lt;/p&gt;
+    &lt;/div&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;alert alert-warning&quot;&gt;
+    &lt;span class=&quot;alert-icon&quot;&gt;&lt;i class=&quot;icon icon-warning&quot;&gt;&lt;/i&gt;&lt;/span&gt;
+    &lt;div class=&quot;alert-content&quot;&gt;
+        &lt;h4&gt;Alert warning&lt;/h4&gt;
+        &lt;p&gt;
+            Simple text warning
+        &lt;/p&gt;
+    &lt;/div&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;alert alert-danger&quot;&gt;
+    &lt;span class=&quot;alert-icon&quot;&gt;&lt;i class=&quot;icon icon-close&quot;&gt;&lt;/i&gt;&lt;/span&gt;
+    &lt;div class=&quot;alert-content&quot;&gt;
+        &lt;h4&gt;Alert danger&lt;/h4&gt;
+        &lt;p&gt;
+            Simple text danger
+        &lt;/p&gt;
+    &lt;/div&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;/div&gt;</code></pre>
+					</div>
+				</div>
+			</div>
+    </div>
+  </section>
 </div>
