--- a/urbanstory/pages/components/toast.html
+++ b/urbanstory/pages/components/toast.html
@@ -6,27 +6,27 @@
 		<h4>Initial / Relative Toast</h4>
 		<div class="toast">
 			<p>Toast sample</p>
-			<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
+			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
 		</div>
 		<br>
 		<div class="toast is-warning">
 			<p>Toast sample</p>
-			<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
+			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
 		</div>
 		<br>
 		<div class="toast is-info">
 			<p>Toast sample</p>
-			<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
+			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
 		</div>
 		<br>
 		<div class="toast is-danger">
 			<p>Toast sample</p>
-			<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
+			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
 		</div>
 		<br>
 		<div class="toast is-success">
 			<p>Toast sample</p>
-			<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
+			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
 		</div>
 		<section class="code-preview has-tab">
 			<div class="card uh-tab">
@@ -37,27 +37,27 @@
 			</div>
 			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;toast&quot;&gt;
     &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;toast is-warning&quot;&gt;
     &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;toast is-info&quot;&gt;
     &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;toast is-danger&quot;&gt;
     &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;toast is-success&quot;&gt;
     &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
 			<pre class="code-snippet display-off" id="sass-1"><code>
 .toast {
@@ -118,7 +118,7 @@
 	</section>
 	<section>
 		<h4>Fixed Toast</h4>
-		<button class="btn btn-firm-o toast-caller">Call Toast</button>
+		<button class="uh-btn uh-btn-firm-o toast-caller">Call Toast</button>
 		<div class="toast-fixed-wrapper" id="toast-fixed-content">
 		</div>
 		<section class="code-preview has-tab">
@@ -132,15 +132,15 @@
 &lt;div class=&quot;toast-fixed-wrapper&quot;&gt;
 	&lt;div class=&quot;toast is-info&quot;&gt;
 		&lt;p&gt;Fixed toast sample&lt;/p&gt;
-		&lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+		&lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;toast is-danger&quot;&gt;
 		&lt;p&gt;Fixed toast sample&lt;/p&gt;
-		&lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+		&lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;toast is-success&quot;&gt;
 		&lt;p&gt;Fixed toast sample&lt;/p&gt;
-		&lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+		&lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 	&lt;/div&gt;
 &lt;/div&gt;
 			</code></pre>
