--- a/urbanstory/src/css/sass/components-global/_button.scss
+++ b/urbanstory/src/css/sass/components-global/_button.scss
@@ -20,6 +20,9 @@
         background-color: darken($c-grey-1, 4%);
         @include box-shadow(0 0 0 3px rgba($c-grey-6, 0.15));
     }
+    [class*=" icon-"]:before, [class^=icon-]:before, [data-icon]:before {
+        vertical-align: middle !important;
+    }
 }
 
 .uh-btn-prime {
