--- a/urbanstory/src/css/urbanstory.css
+++ b/urbanstory/src/css/urbanstory.css
@@ -146,7 +146,7 @@ img {
 }
 
 figcaption {
-  font-size: 12px;
+  font-size: 0.75em;
   color: #757575;
   font-style: italic;
 }
@@ -235,7 +235,7 @@ dl dd {
 
 .uh-btn {
   background-color: #f5f5f5;
-  font-size: 14px;
+  font-size: 0.875em;
   color: #757575;
   padding: 0 1rem;
   line-height: 38px;
@@ -258,6 +258,9 @@ dl dd {
   -webkit-box-shadow: 0 0 0 3px rgba(33, 33, 33, 0.15);
   -moz-box-shadow: 0 0 0 3px rgba(33, 33, 33, 0.15);
   box-shadow: 0 0 0 3px rgba(33, 33, 33, 0.15);
+}
+.uh-btn [class*=" icon-"]:before, .uh-btn [class^=icon-]:before, .uh-btn [data-icon]:before {
+  vertical-align: middle !important;
 }
 
 .uh-btn-prime {
@@ -447,19 +450,19 @@ dl dd {
 }
 
 .uh-btn-small {
-  font-size: 14px;
+  font-size: 0.875em;
   padding: 0 0.5rem;
   line-height: 28px;
 }
 
 .uh-btn-medium {
-  font-size: 16px;
+  font-size: 1em;
   padding: 0 1rem;
   line-height: 38px;
 }
 
 .uh-btn-large {
-  font-size: 18px;
+  font-size: 1.125em;
   padding: 0 1rem;
   line-height: 48px;
 }
