--- a/urbanstory/pages/components/alert.html
+++ b/urbanstory/pages/components/alert.html
@@ -161,6 +161,7 @@
 &lt;/div&gt;</code></pre>
 					<pre class="code-snippet display-off" id="sass-2"><code>
 .alert {
+	//@extend .card;
 	@include flexbox;
 	@include align-items(center);
 	padding: $gutter-l;
@@ -191,7 +192,7 @@
 		align-self: flex-start;
 	}
 	&-info {
-		background: rgba($c-median-1, 0.2);
+		background: $c-median-4;
 		border: 1px solid rgba($c-median-3, 0.2);
 		//color:rgba($c-median-2, .75);
 		color: $c-median-3;
@@ -200,7 +201,7 @@
 		}
 	}
 	&-success {
-		background: rgba($c-green-1, 0.2);
+		background: $c-green-4;
 		border: 1px solid rgba($c-green-3, 0.2);
 		color: $c-green-3;
 		.alert-close {
@@ -208,7 +209,7 @@
 		}
 	}
 	&-warning {
-		background: rgba($c-yellow-1, 0.2);
+		background: $c-yellow-4;
 		border: 1px solid rgba($c-yellow-3, 0.2);
 		color: $c-yellow-3;
 		.alert-close {
@@ -216,7 +217,7 @@
 		}
 	}
 	&-danger {
-		background: rgba($c-red-1, 0.2);
+		background: $c-red-4;
 		border: 1px solid rgba($c-red-3, 0.2);
 		color: rgba(darken($c-red-1, 20), 0.8);
 		color: $c-red-3;
@@ -230,8 +231,7 @@
 		right: $gutter-m;
 		color: rgba(black, 0.35);
 	}
-}
-										
+}								
 					</code></pre>
 					</div>
 				</div>
