--- a/urbanstory/pages/components/toast.html
+++ b/urbanstory/pages/components/toast.html
@@ -3,205 +3,168 @@
 		<h1>Toast</h1>
 	</section>
 	<section>
-		<h4>Initial / Relative Toast</h4>
-		<div class="toast">
-			<p>Toast sample</p>
-			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
-		</div>
-		<br>
-		<div class="toast is-warning">
-			<p>Toast sample</p>
-			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
-		</div>
-		<br>
-		<div class="toast is-info">
-			<p>Toast sample</p>
-			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
-		</div>
-		<br>
-		<div class="toast is-danger">
-			<p>Toast sample</p>
-			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
-		</div>
-		<br>
-		<div class="toast is-success">
-			<p>Toast sample</p>
-			<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
-		</div>
-		<section class="code-preview has-tab">
-			<div class="card uh-tab">
-				<nav class="uh-tab-nav">
-					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
-					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
-				</nav>
+		<div class="row">
+			<div class="col-xs-6">
+				<div class="card m-b-l">
+					<h5>Basic Initial / Relative Toast</h5>
+					<div class="toast">
+						<p>Sample toast default</p>
+						<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
+					</div>
+					<div class="code-preview">
+						<pre class="code-snippet"><code>&lt;div class=&quot;toast&quot;&gt;
+  &lt;p&gt;Sample toast default&lt;/p&gt;
+  &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;/div&gt;
+						</code></pre>
+					</div>
+				</div>
+				<div class="card m-b-l">
+					<h5>Fixed Toast</h5>
+					<button class="uh-btn uh-btn-firm-o toast-caller">Call Toast</button>
+					<div class="toast-fixed-wrapper" id="toast-fixed-content"></div>
+					<div class="code-preview ">
+						<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;toast-fixed-wrapper&quot;&gt;
+  &lt;div class=&quot;toast is-info&quot;&gt;
+    &lt;p&gt;Fixed toast sample&lt;/p&gt;
+    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+						</code></pre>
+					</div>
+				</div>
 			</div>
-			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;toast&quot;&gt;
-    &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+			<div class="col-xs-6">
+				<div class="card m-b-l">
+					<h5>More Types</h5>
+					<div class="toast toast-success m-b-m">
+						<p>Toast success</p>
+						<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
+					</div>
+					
+					<div class="toast toast-info m-b-m">
+						<p>Toast info</p>
+						<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
+					</div>
+					
+					<div class="toast toast-warning m-b-m">
+						<p>Toast warning</p>
+						<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
+					</div>
+					
+					<div class="toast toast-danger m-b-m">
+						<p>Toast danger</p>
+						<button class="uh-btn uh-btn-flat uh-btn-small toast-close"><i class="icon-close"></i></button>
+					</div>
+
+					<div class="code-preview has-tab">
+						<div class="card uh-tab">
+							<nav class="uh-tab-nav">
+								<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+								<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+							</nav>
+						</div>
+						<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;toast toast-success&quot;&gt;
+  &lt;p&gt;Toast success&lt;/p&gt;
+  &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;toast is-warning&quot;&gt;
-    &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;toast toast-info&quot;&gt;
+  &lt;p&gt;Toast info&lt;/p&gt;
+  &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;toast is-info&quot;&gt;
-    &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;toast toast-warning&quot;&gt;
+  &lt;p&gt;Toast warning&lt;/p&gt;
+  &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;toast is-danger&quot;&gt;
-    &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
-&lt;/div&gt;
-
-&lt;div class=&quot;toast is-success&quot;&gt;
-    &lt;p&gt;Toast sample&lt;/p&gt;
-    &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;toast toast-danger&quot;&gt;
+  &lt;p&gt;Toast danger&lt;/p&gt;
+  &lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet display-off" id="sass-1"><code>
+						<pre class="code-snippet display-off" id="sass-1"><code>
 .toast {
-	// @extend .padd-l;
 	padding: 0 $gutter-l;
 	overflow: auto;
 	background: #f3f3f3;
 	border: 1px solid rgba($c-grey-3, 0.2);
-	//line-height:1.5rem;
 	position: relative;
 	color: $c-grey-6;
 	min-width: 320px;
 	max-width: 100%;
 	padding-right: 50px;
 	@include radius;
-	&.is-info {
-		background: $c-info-alert;
+	&-info {
+		background: rgba($c-median-1, 0.2);
 		border: 1px solid rgba($c-median-3, 0.2);
 		//color:rgba($c-median-2, .75);
 		color: $c-median-3;
-		.alert-close {
+		.toast-close {
 			color: rgba($c-median-3, 0.75);
 		}
 	}
-	&.is-success {
-		background: $c-green-alert;
+	&-success {
+		background: rgba($c-green-1, 0.2);
 		border: 1px solid rgba($c-green-3, 0.2);
 		color: $c-green-3;
-		.alert-close {
+		.toast-close {
 			color: rgba($c-green-3, 0.75);
 		}
 	}
-	&.is-warning {
-		background: $c-yellow-alert;
+	&-warning {
+		background: rgba($c-yellow-1, 0.2);
 		border: 1px solid rgba($c-yellow-3, 0.2);
 		color: $c-yellow-3;
-		.alert-close {
+		.toast-close {
 			color: rgba($c-yellow-3, 0.75);
 		}
 	}
-	&.is-danger {
-		background: $c-red-alert;
+	&-danger {
+		background: rgba($c-red-1, 0.2);
 		border: 1px solid rgba($c-red-3, 0.2);
 		color: $c-red-3;
-		.alert-close {
+		.toast-close {
 			color: rgba($c-red-3, 0.75);
 		}
 	}
-	.toast-close {
+	&-close {
 		position: absolute;
-		top: 12px;
-		right: $gutter-m;
-		color: rgba(black, 0.35);
-	}
-}
-			</code></pre>
-		</section>
-	</section>
-	<section>
-		<h4>Fixed Toast</h4>
-		<button class="uh-btn uh-btn-firm-o toast-caller">Call Toast</button>
-		<div class="toast-fixed-wrapper" id="toast-fixed-content">
-		</div>
-		<section class="code-preview has-tab">
-			<div class="card uh-tab">
-				<nav class="uh-tab-nav">
-					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
-					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
-				</nav>
-			</div>
-			<pre class="code-snippet" id="html-2"><code>
-&lt;div class=&quot;toast-fixed-wrapper&quot;&gt;
-	&lt;div class=&quot;toast is-info&quot;&gt;
-		&lt;p&gt;Fixed toast sample&lt;/p&gt;
-		&lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;toast is-danger&quot;&gt;
-		&lt;p&gt;Fixed toast sample&lt;/p&gt;
-		&lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;toast is-success&quot;&gt;
-		&lt;p&gt;Fixed toast sample&lt;/p&gt;
-		&lt;button class=&quot;uh-btn uh-btn-flat uh-btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
-	&lt;/div&gt;
-&lt;/div&gt;
-			</code></pre>
-			<pre class="code-snippet display-off" id="sass-2"><code>
-.toast {
-	// @extend .padd-l;
-	padding: 0 $gutter-l;
-	overflow: auto;
-	background: #f3f3f3;
-	border: 1px solid rgba($c-grey-3, 0.2);
-	//line-height:1.5rem;
-	position: relative;
-	color: $c-grey-6;
-	min-width: 320px;
-	max-width: 100%;
-	padding-right: 50px;
-	@include radius;
-	&.is-info {
-		background: $c-info-alert;
-		border: 1px solid rgba($c-median-3, 0.2);
-		//color:rgba($c-median-2, .75);
-		color: $c-median-3;
-		.alert-close {
-			color: rgba($c-median-3, 0.75);
-		}
-	}
-	&.is-success {
-		background: $c-green-alert;
-		border: 1px solid rgba($c-green-3, 0.2);
-		color: $c-green-3;
-		.alert-close {
-			color: rgba($c-green-3, 0.75);
-		}
-	}
-	
-	&.is-danger {
-		background: $c-red-alert;
-		border: 1px solid rgba($c-red-3, 0.2);
-		color: $c-red-3;
-		.alert-close {
-			color: rgba($c-red-3, 0.75);
-		}
-	}
-	.toast-close {
-		position: absolute;
-		top: 12px;
+		top: $gutter-m;
 		right: $gutter-m;
 		color: rgba(black, 0.35);
 	}
 	&.hide {
-		display: none;
+		//display: none;
+		-webkit-animation:fade-out 0.25s ease-out both;
+		animation:fade-out 0.25s ease-out both;
+	}
+
+	@-webkit-keyframes fade-out {
+	0% {
+			opacity: 1
+	}
+	to {
+			opacity: 0
 	}
 }
 
+@keyframes fade-out {
+	0% {
+			opacity: 1
+	}
+	to {
+			opacity: 0
+	}
+}
+
+
+}
 .toast-fixed-wrapper {
 	position: fixed;
 	z-index: 889;
-	//background:grey;
-	//outline: solid 1px red;
 	bottom: $gutter-l;
-	left: $gutter-l;
+	right: $gutter-l;
 	.toast {
 		margin-bottom: $gutter-m;
 		@include box-shadow(0 8px 16px rgba(black, 0.2));
@@ -209,8 +172,11 @@
 			margin-bottom: 0;
 		}
 	}
-}
-			</code></pre>
-		</section>
+}							
+					</code></pre>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 </div>
