--- a/urbanstory/src/css/sass/components-global/_alert.scss
+++ b/urbanstory/src/css/sass/components-global/_alert.scss
@@ -31,7 +31,7 @@
     align-self: flex-start;
   }
   &-info {
-    background: rgba($c-median-1, 0.2);
+    background: $c-median-4;
     border: 1px solid rgba($c-median-3, 0.2);
     //color:rgba($c-median-2, .75);
     color: $c-median-3;
@@ -40,7 +40,7 @@
     }
   }
   &-success {
-    background: rgba($c-green-1, 0.2);
+    background: $c-green-4;
     border: 1px solid rgba($c-green-3, 0.2);
     color: $c-green-3;
     .alert-close {
@@ -48,7 +48,7 @@
     }
   }
   &-warning {
-    background: rgba($c-yellow-1, 0.2);
+    background: $c-yellow-4;
     border: 1px solid rgba($c-yellow-3, 0.2);
     color: $c-yellow-3;
     .alert-close {
@@ -56,7 +56,7 @@
     }
   }
   &-danger {
-    background: rgba($c-red-1, 0.2);
+    background: $c-red-4;
     border: 1px solid rgba($c-red-3, 0.2);
     color: rgba(darken($c-red-1, 20), 0.8);
     color: $c-red-3;
